--- a/Firm2.html
+++ b/Firm2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ตางรางเวลา</title>
+    <title>ตารางเวลา</title>
 
     <style>
       body {
@@ -78,6 +78,7 @@
         font-weight: 600;
         margin-bottom: 14px;
         cursor: pointer;
+        text-align: center;
       }
 
       .bottom-nav {
@@ -103,7 +104,7 @@
     <!-- Header -->
     <div class="header">
       <div class="back" onclick="location.href='index.html'">←</div>
-      วันจันทร์
+      <span id="day-title">ตารางเวลา</span>
       <div class="username" id="username">JS</div>
     </div>
 
@@ -116,7 +117,7 @@
       </div>
 
       <div class="section-title">ตัดสินใจเลือกกิจกรรม</div>
-      <button class="btn-gray" onclick="selectActivity()">เลือกกิจกรรม</button>
+      <button class="btn-gray" onclick="random1Activity()">เลือกกิจกรรม</button>
 
       <div class="section-title">กิจกรรมอัตโนมัติ</div>
       <button class="btn-gray" id="autoActivity">กำลังคำนวณกิจกรรม...</button>
@@ -135,5 +136,22 @@
 
     <!-- JS -->
     <script src="Firm2.js"></script>
+    <script>
+      // เพิ่มสคริปต์เล็กน้อยเพื่อเปลี่ยนชื่อวันใน Header ตามจริง
+      document.addEventListener("DOMContentLoaded", () => {
+        const days = [
+          "วันอาทิตย์",
+          "วันจันทร์",
+          "วันอังคาร",
+          "วันพุธ",
+          "วันพฤหัสบดี",
+          "วันศุกร์",
+          "วันเสาร์",
+        ];
+        const today = new Date().getDay();
+        const dayTitle = document.getElementById("day-title");
+        if (dayTitle) dayTitle.innerText = days[today];
+      });
+    </script>
   </body>
 </html>
